Remove Example
